# edgedb-auth-rust

./: Cargo.toml  readme.md
src/: main.rs
