[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "2.0.0"
rand = "0.8.5"
random-string = "1.0.1"
sha2 = "0.10.8"
actix-web = { version = "4.4.0", features = ["cookies"] }
actix-session = { version = "0.8", features = ["cookie-session"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = "1.34.0"