[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4.4.0", features = ["cookies"] }
base64-url = "2.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
url = "2.4.1"